--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,8 +13,8 @@ pytz = "^2024.1"
 loguru = "^0.7.2"
 python-dotenv = "^1.0.1"
 requests = "^2.31.0"
-fastapi = "^0.111.0"
 tomli = "^2.0.1"
+aiohttp = "^3.9.5"
 
 [build-system]
 requires = ["poetry-core"]
