--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ python-dotenv = "^1.0.1"
 requests = "^2.31.0"
 tomli = "^2.0.1"
 aiohttp = "^3.9.5"
+psutil = "^5.9.8"
+nuitka = "^2.3.3"
 
 [build-system]
 requires = ["poetry-core"]
